force-app/main/default/objects/Cluster_Unit__c/fields/Active_from_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_from_Date__c</fullName>
    <description>To register the date since this cluster is active</description>
    <inlineHelpText>To register the date since this cluster is active</inlineHelpText>
    <label>Active from Date</label>
    <type>Date</type>
</CustomField>