force-app/main/default/objects/Cluster_Unit__c/fields/Active_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_to_Date__c</fullName>
    <description>To set the end date of the cluster</description>
    <inlineHelpText>To set the end date of the cluster</inlineHelpText>
    <label>Active to Date</label>
    <type>Date</type>
</CustomField>