force-app/main/default/objects/Cluster_Unit__c/fields/Upsert_Key__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Key__c</fullName>
    <description>Concatenation of cluster external id and contract unit external id, to avoid duplicate relations</description>
    <externalId>true</externalId>
    <inlineHelpText>Concatenatie van cluster extern Id en contract eenheid Id, om duplicaat relaties te voorkomen</inlineHelpText>
    <label>Upsert Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>